interstellar/tests/gql/snapshots/gql__snapshots__parse_match_remove_multiple_properties_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Mutation:
  match_clause:
    patterns:
      - elements:
          - Node:
              variable: p
              labels:
                - Person
              properties: []
              where_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Remove:
        properties:
          - variable: p
            property: temp1
          - variable: p
            property: temp2
  foreach_clauses: []
  return_clause: ~
